--- a/resume/cv.html
+++ b/resume/cv.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title> Resume </title>
-    <link rel="icon" href="resume.png"/>
-    <link rel="stylesheet" href="Port.css" />
+    <link rel="icon" href="cpu.png"/>
+    <link rel="stylesheet" href="style.css" />
 
 </head>
 <body>
