--- a/resume/index.html
+++ b/resume/index.html
@@ -65,7 +65,7 @@
 
     <section class="projects center" id="Projects">
       <h1 class="project_heading">Projects</h1>
-        <img class="project_img1" src="Anit.png" alt="">
+        <img class="project_img1" src="anit.png" alt="">
       <div class="container center">
         <div class="main_box center">
           <div class="box">
