--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Resume </title>
+    <title> Mustafa Selim Gunaydin </title>
     <link rel="icon" href="cpu.png"/>
     <link rel="stylesheet" href="style.css" />
 </head>
