--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Mustafa Selim Gunaydin </title>
-    <link rel="icon" href="cpu.png"/>
+    <link rel="icon" href="flash.png"/>
     <link rel="stylesheet" href="style.css" />
 </head>
 
