--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
     <section id="main" class="center">
             <div class="user_info">
-                <h1 class="user_name">Mustafa Selim GUNAYDIN</h1>
+                <h1 class="user_name" id="name">Mustafa Selim GUNAYDIN</h1>
                  <p>Electrical Engineer</p>
                  <p>&nbsp;</p>
+
             <a href="#About" class="btn">About</a>
             <a href="#Skills" class="btn">Skills</a>
             <a href="#Projects" class="btn">Projects</a>
@@ -29,10 +30,20 @@
      <section class="about center" id="About">
             <div class="center">
               <h1 class="about_heading">About</h1>
-                <p> Hello! My name is Mustafa Selim, and I'm an Electrical Engineer. </p>
+                <p> My name is Mustafa Selim and I'm an Electrical Engineer. </p>
                 <br>
-                <p> I am improving myself for analytical abilities and techinical skills necessary for innovative designs and applications.</p>
+                <p>
+                  I got admitted to Kocaeli Electrical Engineering in 2016. I have taken courses throughout my education life.
+                  I worked on Photovoltaic Systems in my project work.
+                </p>
+              <br>
+                <p>
+                  In my thesis, I designed the ' Tooth Paste Production Process (SCADA) ' using the TIA Portal software.
+                  I did my first internship at Turkmen Electricity Construction Industry Trade and my next internship at Sivart.
+                  And I graduated in 2020.
+                </p>
             </div>
+
      </section>
 
     <section class="skills center" id="Skills">
@@ -60,13 +71,13 @@
 
             <div class="box">
               <p>HTML / CSS / Javascript</p>
-        </div>
+            </div>
       </div>
     </section>
 
     <section class="projects center" id="Projects">
       <h1 class="project_heading">Projects</h1>
-        <img class="project_img1" src="anit.png" alt="">
+          <img class="project_img1" src="anit1.png" alt="" >
       <div class="container center">
         <div class="main_box center">
           <div class="box">
@@ -122,7 +133,7 @@
             <p>ENPAY INDUSTRIAL MARKETING AND INVESTMENT</p>
           </div>
         </div>
-      <img class="project_img2" src="sivart.jpg" alt="">
+            <img class="project_img2" src="sivart1.png" alt="">
         <div class="main_box2 center">
           <div class="box">
             <h3>LANDFILL GAS TO ENERGY</h3>
