--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="main_box center">
           <div class="box">
-            <h3>VERGO SLITING MACHINE</h3>
+            <h3>VERGO SLICING MACHINE</h3>
             <p>GERD WOLFF MACHINE</p>
           </div>
         </div>
@@ -207,6 +207,15 @@
             <div class="box">
               <p>Programming Essentials In Python / Cisco</p>
             </div>
+
+            <div class="box">
+              <p>KAIZEN Seminar / Elginkan</p>
+            </div>
+
+            <div class="box">
+              <p>NLP Program Seminar / Elginkan</p>
+            </div>
+            
 
       </div>
     </section>
