--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
       <h2 class="marker marker-center">Education</h2>
     </div>
     <div class="text-center">
+      <i class="fas fa-graduation-cap"></i>
+      <div class="pb-3 fa-2x">Kanuni Anatolian High School</div>
+      <div class="pb-3 fw-bolder">2012 - 2016</div>
+    </div>
+    </br>
+    <div class="text-center">
         <i class="fas fa-graduation-cap"></i>
         <div class="pb-3 fa-2x">Kocaeli University</div>
         <div class="pb-3 fa-1x">Electrical Engineering</div>
