--- a/index.html
+++ b/index.html
@@ -274,8 +274,13 @@
                     <div class="d-flex justify-content-between">
                       <div>
                         <h3 class="h5 mb-1">Izmir Java Bootcamp</h3>
-                        <div class="text-muted text-small">Kodluyoruz  <small>(2021)</small></div>
-                      </div><img src="images/java.png" width="48" height="48" alt="java"/>
+                        <div class="text-muted text-small">Kodluyoruz  <small>(2021)</small>
+                          <a style="margin-left: 20px" href="images/javabootcamp.png">
+                          <i class="fas fa-link"></i>
+                        </a></div>
+                      </div>
+
+                      <img src="images/java.png" width="48" height="48" alt="java"/>
                     </div>
                   </div>
                   <div class="card-body px-2 py-1">
@@ -328,7 +333,11 @@
                     <div class="d-flex justify-content-between">
                       <div>
                         <h3 class="h5 mb-1">Java Object-Oriented Programming</h3>
-                        <div class="text-muted text-small">Elginkan <small>(2019)</small></div>
+                        <div class="text-muted text-small">Elginkan <small>(2019)</small>
+                          <a style="margin-left: 20px" href="images/oop.jpg">
+                            <i class="fas fa-link"></i>
+                          </a>
+                        </div>
                       </div><img src="images/oop.png" width="48" height="48" alt="object-oriented"/>
                     </div>
                   </div>
@@ -340,8 +349,13 @@
                     <div class="d-flex justify-content-between">
                       <div>
                         <h3 class="h5 mb-1">Programming Essentials In Python</h3>
-                        <div class="text-muted text-small">Cisco & UNX <small>(2020)</small></div>
+                        <div class="text-muted text-small">Cisco & UNX <small>(2020)</small>
+                        <a style="margin-left: 20px" href="images/python.jpg">
+                          <i class="fas fa-link"></i>
+                        </a>
+                        </div>
                       </div><img src="images/python.png" width="48" height="48" alt="python"/>
+
                     </div>
                   </div>
                 </div>
