--- a/index.html
+++ b/index.html
@@ -75,16 +75,10 @@
           I am a reliable person who fulfills his duties on time and in the most accurate way.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
-            <div class="pb-1">Age:</div>
+            <div class="pb-1">Birthdate:</div>
           </div>
           <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">23</div>
-          </div>
-          <div class="col-sm-2">
-            <div class="pb-1">Phone:</div>
-          </div>
-          <div class="col-sm-10">
-            <div class="pb-1 fw-bolder">+90 536 922 85 27</div>
+            <div class="pb-1 fw-bolder">01/04/1998</div>
           </div>
           <div class="col-sm-2">
             <div class="pb-1">Address:</div>
