--- a/index.html
+++ b/index.html
@@ -188,13 +188,43 @@
     </div>
     <div class="row">
       <div class="col-md-6">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
+                <h3 class="h5 mb-1">REST Assured Api Tests</h3>
+                <div class="text-muted text-small">API Test <small>(2021)</small></div>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests" title="project1-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+            </div>
+          </div>
+          <div class="card-body px-2 py-1">
+            <p style="font-style: oblique">libraries REST Assured , TestNG</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
+                <h3 class="h5 mb-1">Web UI Test with C#</h3>
+                <div class="text-muted text-small">.NET & SpecFlow <small>(2021)</small></div>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/WebUITestWithCs" title="project2-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+            </div>
+          </div>
+          <div class="card-body px-2 py-1">
+            <p style="font-style: oblique">libraries .NET, SpecFlow, NUnit, Selenium</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
         <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
                 <h3 class="h5 mb-1">Kloia Bootcamp</h3>
                 <div class="text-muted text-small">Homework <small>(2021)</small></div>
-              </div><a class="nav-link" href="https://github.com/MustafaSelimG/KloiaBootcampHW" title="project1-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/KloiaBootcampHW" title="project3-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
             </div>
           </div>
           <div class="card-body px-2 py-1">
@@ -219,7 +249,7 @@
               <div>
                 <h3 class="h5 mb-1">Kloia Bootcamp</h3>
                 <div class="text-muted text-small">Kata Tasks <small>(2021)</small></div>
-              </div><a class="nav-link" href="https://github.com/MustafaSelimG/KloiaQAEngineerBootcamp" title="project2-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/KloiaQAEngineerBootcamp" title="project4-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
             </div>
           </div>
           <div class="card-body px-2 py-1">
@@ -243,9 +273,24 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
+                <h3 class="h5 mb-1">Testinium Case Study</h3>
+                <div class="text-muted text-small">Testinium <small>(2021)</small></div>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/TestiniumCaseStudy" title="project5-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+            </div>
+          </div>
+          <div class="card-body px-2 py-1">
+            <p style="font-style: oblique">libraries Selenium , Cucumber , JUnit , WebDriverManager , Log4j </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+          <div class="card-header px-3 py-2">
+            <div class="d-flex justify-content-between">
+              <div>
                 <h3 class="h5 mb-1">Patika Projects</h3>
                 <div class="text-muted text-small">Patika.dev <small>(2021)</small></div>
-              </div><a class="nav-link" href="https://github.com/MustafaSelimG/Patika" title="project3-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
+              </div><a class="nav-link" href="https://github.com/MustafaSelimG/Patika" title="project6-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
             </div>
           </div>
           <div class="card-body px-2 py-1">
