--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-thumbnail shadow" src="images/profile.png" width="350" height="450"/></div>
+      <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-thumbnail shadow" src="images/portrait.png" width="350" height="450"/></div>
     </div>
   </div>
 </div>
@@ -139,13 +139,13 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">C#</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 55%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">C#</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="350" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -193,12 +193,24 @@
             <div class="d-flex justify-content-between">
               <div>
                 <h3 class="h5 mb-1">REST Assured Api Tests</h3>
-                <div class="text-muted text-small">API Test <small>(2021)</small></div>
+                <div class="text-muted text-small">Api Tests in Github and Medium <small>(2021)</small></div>
               </div><a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests" title="project1-link"><i class="fab fa-github" style="font-size: xx-large"></i></a>
             </div>
           </div>
           <div class="card-body px-2 py-1">
-            <p style="font-style: oblique">libraries REST Assured , TestNG</p>
+            <p style="font-style: oblique">libraries REST Assured, TestNG</p>
+            <h5>Github</h5>
+            <li>Get User Information</li>
+            <li>Get Repositories</li>
+            <li>Get Repository</li>
+            <li>Get Readme File</li>
+            <li>Post Repository</li>
+            <li>Delete Repository</li>
+            </br>
+            <h5>Medium</h5>
+            <li>Get User Information</li>
+            <li>Get Publications</li>
+            <li>Create a post</li>
           </div>
         </div>
       </div>
@@ -214,6 +226,15 @@
           </div>
           <div class="card-body px-2 py-1">
             <p style="font-style: oblique">libraries .NET, SpecFlow, NUnit, Selenium</p>
+            </br>
+            <h5>Background</h5>
+            <li>login and verify the homepage is open</li>
+            </br>
+            <h5>Scenario</h5>
+            <li>verify the basket is empty</li>
+            </br>
+            <h5>Scenario</h5>
+            <li>verify the product price</li>
           </div>
         </div>
       </div>
@@ -279,7 +300,14 @@
             </div>
           </div>
           <div class="card-body px-2 py-1">
-            <p style="font-style: oblique">libraries Selenium , Cucumber , JUnit , WebDriverManager , Log4j </p>
+            <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Log4j </p>
+            <h5>Web Testing</h5>
+            <li>verify the account, favorites and basket section</li>
+            <li>search and verify the search page</li>
+            <li>randomly select a product </li>
+            <li>verify the product price</li>
+            <li>add product the basket and increase the quantity</li>
+            <li>remove product and verify the basket is empty</li>
           </div>
         </div>
       </div>
@@ -294,7 +322,12 @@
             </div>
           </div>
           <div class="card-body px-2 py-1">
-            <p style="font-style: oblique">includes GIT, Data Structures and Algorithms, Java101, Object-Oriented Programming, SQL, Java 102, Microservices and Deployment course projects</p>
+            <h5>Courses</h5>
+            <li>Object-Oriented Programming</li>
+            <li>Java 101</li>
+            <li>Java 102</li>
+            <li>SQL</li>
+            <li>Data Structures & Algorithms</li>
           </div>
         </div>
       </div>
