--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Education</h2>
     </div>
-    <div class="text-center">
-      <i class="fas fa-graduation-cap"></i>
-      <div class="pb-3 fa-2x">Kanuni Anatolian High School</div>
-      <div class="pb-3 fw-bolder">2012 - 2016</div>
-    </div>
-    </br>
-    <div class="text-center">
-        <i class="fas fa-graduation-cap"></i>
-        <div class="pb-3 fa-2x">Kocaeli University</div>
-        <div class="pb-3 fa-1x">Electrical Engineering</div>
-        <div class="pb-3 fw-bolder">2016 - 2020</div>
-    </div>
+		<div class="text-center">
+			<i class="fas fa-graduation-cap"></i>
+			<div class="pb-3 fa-2x">Kocaeli University</div>
+			<div class="pb-3 fa-1x">Electrical Engineering</div>
+			<div class="pb-3 fw-bolder">2016 - 2020</div>
+		</div>
+	</br>
+		<div class="text-center">
+		  <i class="fas fa-graduation-cap"></i>
+		  <div class="pb-3 fa-2x">Kanuni Anatolian High School</div>
+		  <div class="pb-3 fw-bolder">2012 - 2016</div>
+		</div>
   </div>
 </div>
 <div class="section px-3 px-lg-4 pt-5" id="skills">
@@ -249,7 +249,7 @@
             </div>
           </div>
           <div class="card-body px-2 py-1">
-            <p style="font-style: oblique">includes Selenium, Cucumber, JUnit, Gherkin, Karate, API, BDD, POM, Test Automation</p>
+            <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Gherkin, Karate, API </p>
             <h5>Web Testing</h5>
             <li>verify search result</li>
             <li>verify successful login</li>
@@ -274,7 +274,7 @@
             </div>
           </div>
           <div class="card-body px-2 py-1">
-            <p style="font-style: oblique">includes Selenium, Cucumber, JUnit, Gherkin, Karate, API, BDD, POM, Test Automation </br> We completed the tasks within the given time</p>
+            <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Gherkin, Karate, API </br> We completed the tasks within the given time</p>
             <h5>Web Testing</h5>
             <li>logo verification</li>
             <li>sign in page verification</li>
