--- a/index.html
+++ b/index.html
@@ -62,28 +62,34 @@
                                         <ul class="nav justify-content-left">
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="mailto:mustafaselimgunaydin@gmail.com"
+                                                                    target="_blank"
                                                                     title="Gmail"><i class="bi-envelope-fill"></i><span
                                                     class="menu-title sr-only">Gmail</span></a></li>
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="https://github.com/MustafaSelimG"
+                                                                    target="_blank"
                                                                     title="Gtihub"><i class="fab fa-github"></i><span
                                                     class="menu-title sr-only">Github</span></a></li>
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="https://www.linkedin.com/in/mustafaselimgunaydin/"
+                                                                    target="_blank"
                                                                     title="LinkedIn"><i
                                                     class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a>
                                             </li>
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="https://medium.com/@mustafaselimg"
+                                                                    target="_blank"
                                                                     title="Medium"><i class="fab fa-medium"></i><span
                                                     class="menu-title sr-only">Medium</span></a></li>
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="https://stackoverflow.com/users/17685506/mustafa-selim"
+                                                                    target="_blank"
                                                                     title="Stackoverflow"><i
                                                     class="fab fa-stack-overflow"></i><span class="menu-title sr-only">Stackoverflow</span></a>
                                             </li>
                                             <li class="nav-item"><a class="nav-link"
                                                                     href="https://www.hackerrank.com/mustafaselimg"
+                                                                    target="_blank"
                                                                     title="Hackerrank"><i class="fab fa-hackerrank"></i><span
                                                     class="menu-title sr-only">Hackerrank</span></a></li>
                                         </ul>
@@ -234,12 +240,13 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">REST Assured Api Tests</h3>
-                                <div class="text-muted text-small">Api Tests in Github and Medium
+                                <h3 class="h5 mb-1">REST Assured API Tests</h3>
+                                <div class="text-muted text-small">API Tests in Github and Medium
                                     <small>(2021)</small>
                                 </div>
                             </div>
                             <a class="nav-link" href="https://github.com/MustafaSelimG/RESTAssuredApiTests"
+                               target="_blank"
                                title="project1-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
@@ -270,7 +277,7 @@
                                 <div class="text-muted text-small">.NET & SpecFlow <small>(2021)</small>
                                 </div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/WebUITestWithCs"
+                            <a class="nav-link" href="https://github.com/MustafaSelimG/WebUITestWithCs" target="_blank"
                                title="project2-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
@@ -294,10 +301,10 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Kloia Bootcamp</h3>
-                                <div class="text-muted text-small">Homework <small>(2021)</small></div>
+                                <h3 class="h5 mb-1">Web & API Tests</h3>
+                                <div class="text-muted text-small">Kloia Bootcamp Homework <small>(2021)</small></div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/KloiaBootcampHW"
+                            <a class="nav-link" href="https://github.com/MustafaSelimG/KloiaBootcampHW" target="_blank"
                                title="project3-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
@@ -323,11 +330,11 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Kloia Bootcamp</h3>
-                                <div class="text-muted text-small">Kata Tasks <small>(2021)</small></div>
+                                <h3 class="h5 mb-1">Web & API Tests</h3>
+                                <div class="text-muted text-small">Kloia Bootcamp Kata Tasks <small>(2021)</small></div>
                             </div>
                             <a class="nav-link"
-                               href="https://github.com/MustafaSelimG/KloiaQAEngineerBootcamp"
+                               href="https://github.com/MustafaSelimG/KloiaQAEngineerBootcamp" target="_blank"
                                title="project4-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
@@ -354,10 +361,11 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Testinium Case Study</h3>
-                                <div class="text-muted text-small">Testinium <small>(2021)</small></div>
+                                <h3 class="h5 mb-1">Web UI Test with Java</h3>
+                                <div class="text-muted text-small">Testinium Case Study <small>(2021)</small></div>
                             </div>
                             <a class="nav-link" href="https://github.com/MustafaSelimG/TestiniumCaseStudy"
+                               target="_blank"
                                title="project5-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
@@ -383,8 +391,8 @@
                                 <div class="text-muted text-small">Patika.dev <small>(2021)</small></div>
                             </div>
                             <a class="nav-link" href="https://github.com/MustafaSelimG/Patika"
-                               title="project6-link"><i class="fab fa-github"
-                                                        style="font-size: xx-large"></i></a>
+                               target="_blank" title="project6-link"><i class="fab fa-github"
+                                                                        style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
@@ -413,7 +421,7 @@
                             <div>
                                 <h3 class="h5 mb-1">Izmir Java Bootcamp</h3>
                                 <div class="text-muted text-small">Kodluyoruz <small>(2021)</small>
-                                    <a style="margin-left: 20px" href="images/javabootcamp.png">
+                                    <a style="margin-left: 20px" href="images/javabootcamp.png" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a></div>
                             </div>
@@ -473,7 +481,7 @@
                             <div>
                                 <h3 class="h5 mb-1">Java Object-Oriented Programming</h3>
                                 <div class="text-muted text-small">Elginkan <small>(2019)</small>
-                                    <a style="margin-left: 20px" href="images/oop.jpg">
+                                    <a style="margin-left: 20px" href="images/oop.jpg" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -490,13 +498,43 @@
                             <div>
                                 <h3 class="h5 mb-1">Programming Essentials In Python</h3>
                                 <div class="text-muted text-small">Cisco & UNX <small>(2020)</small>
-                                    <a style="margin-left: 20px" href="images/python.jpg">
+                                    <a style="margin-left: 20px" href="images/python.jpg" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <img src="images/python.png" width="48" height="48" alt="python"/>
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">API & API Tests</h3>
+                                <div class="text-muted text-small">BTK Academy <small>(2021)</small>
+                                    <a style="margin-left: 20px" href="images/btkapitest.PNG" target="_blank">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <img src="images/api.png" width="48" height="48" alt="api"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Java Spring Bootcamp</h3>
+                                <div class="text-muted text-small">PayCore Patika <small>(2021)</small>
+                                </div>
+                            </div>
+                            <img src="images/spring.png" width="48" height="48" alt="spring"/>
                         </div>
                     </div>
                 </div>
@@ -514,27 +552,29 @@
                 <nav role="navigation">
                     <ul class="nav justify-content-center">
                         <li class="nav-item"><a class="nav-link"
-                                                href="mailto:mustafaselimgunaydin@gmail.com"
+                                                href="mailto:mustafaselimgunaydin@gmail.com" target="_blank"
                                                 title="Gmail"><i class="bi-envelope-fill"></i><span
                                 class="menu-title sr-only">Gmail</span></a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://github.com/MustafaSelimG"
+                        <li class="nav-item"><a class="nav-link" href="https://github.com/MustafaSelimG" target="_blank"
                                                 title="Github"><i class="fab fa-github"></i><span
                                 class="menu-title sr-only">Github</span></a></li>
                         <li class="nav-item"><a class="nav-link"
-                                                href="https://www.linkedin.com/in/mustafaselimgunaydin/"
+                                                href="https://www.linkedin.com/in/mustafaselimgunaydin/" target="_blank"
                                                 title="LinkedIn"><i class="fab fa-linkedin"></i><span
                                 class="menu-title sr-only">LinkedIn</span></a></li>
                         <li class="nav-item"><a class="nav-link" href="https://medium.com/@mustafaselimg"
+                                                target="_blank"
                                                 title="Medium"><i class="fab fa-medium"></i><span
                                 class="menu-title sr-only">Medium</span></a></li>
                         <li class="nav-item"><a class="nav-link"
                                                 href="https://stackoverflow.com/users/17685506/mustafa-selim"
+                                                target="_blank"
                                                 title="Stackoverflow"><i
                                 class="fab fa-stack-overflow"></i><span
                                 class="menu-title sr-only">Stackoverflow</span></a>
                         </li>
                         <li class="nav-item"><a class="nav-link"
-                                                href="https://www.hackerrank.com/mustafaselimg"
+                                                href="https://www.hackerrank.com/mustafaselimg" target="_blank"
                                                 title="Hackerrank"><i class="fab fa-hackerrank"></i><span
                                 class="menu-title sr-only">Hackerrank</span></a></li>
                     </ul>
