--- a/index.html
+++ b/index.html
@@ -185,14 +185,12 @@
                                 </div>
                             </div>
                             <div class="card-body px-2 py-2">
-                                <ul>
-                                    <li><h4 class="fw-normal">Java</h4></li>
-                                    <li><h4 class="fw-normal">Python</h4></li>
-                                    <li><h4 class="fw-normal">C#</h4></li>
-                                    <li><h4 class="fw-normal">JavaScript</h4></li>
-                                    <li><h4 class="fw-normal">SQL</h4></li>
-                                    <li><h4 class="fw-normal">CSS</h4></li>
-                                </ul>
+                                <h4 class="fw-normal">● Java </h4>
+                                <h4 class="fw-normal">● Python </h4>
+                                <h4 class="fw-normal">● C# </h4>
+                                <h4 class="fw-normal">● JavaScript </h4>
+                                <h4 class="fw-normal">● SQL </h4>
+                                <h4 class="fw-normal">● CSS </h4>
                             </div>
                         </div>
                     </div>
@@ -207,20 +205,11 @@
                                 </div>
                             </div>
                             <div class="card-body px-2 py-1">
-                                <ul>
-                                    <li><h5 class="fw-normal">Selenium</h5></li>
-                                    <li><h5 class="fw-normal">Cucumber</h5></li>
-                                    <li><h5 class="fw-normal">Specflow</h5></li>
-                                    <li><h5 class="fw-normal">REST</h5></li>
-                                    <li><h5 class="fw-normal">JUnit</h5></li>
-                                    <li><h5 class="fw-normal">NUnit</h5></li>
-                                    <li><h5 class="fw-normal">TestNG</h5></li>
-                                    <li><h5 class="fw-normal">Spring</h5></li>
-                                    <li><h5 class="fw-normal">Postman</h5></li>
-                                    <li><h5 class="fw-normal">Karate</h5></li>
-                                    <li><h5 class="fw-normal">Jenkins</h5></li>
-                                    <li><h5 class="fw-normal">JMeter</h5></li>
-                                </ul>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Selenium       ● REST           ● Jenkins</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● Cucumber     ● Appium      ● Postman</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● TestNG          ● Specflow    ● Spring</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● JUnit              ● Behave       ● JMeter</pre>
+                                <pre style="font-size: 22px;font-family: 'Segoe UI',sans-serif">● NUnit             ● Karate     </pre>
                             </div>
                         </div>
                     </div>
@@ -273,6 +262,32 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
+                                <h3 class="h5 mb-1">Web UI Test with Java</h3>
+                                <div class="text-muted text-small">Testinium Case Study <small>(2021)</small></div>
+                            </div>
+                            <a class="nav-link" href="https://github.com/MustafaSelimG/TestiniumCaseStudy"
+                               target="_blank"
+                               title="project5-link"><i class="fab fa-github"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Log4j </p>
+                        <h5>Web Testing</h5>
+                        <li>verify the account, favorites and basket section</li></br>
+                        <li>search and verify the search page</li></br>
+                        <li>randomly select a product</li></br>
+                        <li>verify the product price</li></br>
+                        <li>add product the basket and increase the quantity</li></br>
+                        <li>remove product and verify the basket is empty</li></br>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
                                 <h3 class="h5 mb-1">Web UI Test with C#</h3>
                                 <div class="text-muted text-small">.NET & SpecFlow <small>(2021)</small>
                                 </div>
@@ -285,17 +300,36 @@
                     <div class="card-body px-2 py-1">
                         <p style="font-style: oblique">libraries .NET, SpecFlow, NUnit, Selenium</p>
                         </br>
-                        <h5>Background</h5>
-                        <li>login and verify the homepage is open</li>
-                        </br>
-                        <h5>Scenario</h5>
+                        <h5>Web Testing</h5>
                         <li>verify the basket is empty</li>
-                        </br>
-                        <h5>Scenario</h5>
                         <li>verify the product price</li>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Web UI Test with Python</h3>
+                                <div class="text-muted text-small">Behave, Selenium <small>(2021)</small></div>
+                            </div>
+                            <a class="nav-link" href="https://github.com/MustafaSelimG/WebUITestPythonBehave"
+                               target="_blank"
+                               title="project5-link"><i class="fab fa-github"
+                                                        style="font-size: xx-large"></i></a>
+                        </div>
+                    </div>
+                    <div class="card-body px-2 py-1">
+                        <p style="font-style: oblique">libraries Behave, Selenium </p>
+                        <h5>Web Testing</h5>
+                        <li>verify login</li>
+                        <li>verify empty basket</li>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-md-6">
                 <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
                     <div class="card-header px-3 py-2">
@@ -361,24 +395,20 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="h5 mb-1">Web UI Test with Java</h3>
-                                <div class="text-muted text-small">Testinium Case Study <small>(2021)</small></div>
+                                <h3 class="h5 mb-1">Android UI Test with Appium</h3>
+                                <div class="text-muted text-small">Java,Appium <small>(2021)</small></div>
                             </div>
-                            <a class="nav-link" href="https://github.com/MustafaSelimG/TestiniumCaseStudy"
+                            <a class="nav-link" href="https://github.com/MustafaSelimG/AndroidUITestWithAppium"
                                target="_blank"
                                title="project5-link"><i class="fab fa-github"
                                                         style="font-size: xx-large"></i></a>
                         </div>
                     </div>
                     <div class="card-body px-2 py-1">
-                        <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Log4j </p>
+                        <p style="font-style: oblique">libraries Appium, Selenium, Cucumber, JUnit, TestNG </p>
                         <h5>Web Testing</h5>
-                        <li>verify the account, favorites and basket section</li>
-                        <li>search and verify the search page</li>
-                        <li>randomly select a product</li>
-                        <li>verify the product price</li>
-                        <li>add product the basket and increase the quantity</li>
-                        <li>remove product and verify the basket is empty</li>
+                        <li>verify login</li>
+                        <li>verify product on favorites</li>
                     </div>
                 </div>
             </div>
@@ -405,6 +435,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 </div>
@@ -509,7 +540,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
